QML/3D Examples do not work on Symbian.
The reason is unknown, but may be due to the QML file search path (as per Windows).
- relates to
-
QTBUG-19396 Symbian^3: "teaservice" white screen
-
- Closed
-
QML/3D Examples do not work on Symbian.
The reason is unknown, but may be due to the QML file search path (as per Windows).
QTBUG-19396
Symbian^3: "teaservice" white screen