QTBUG-19427 Finalised. QML/3D working on Symbian.

Original patch by Danny Pope, just needed to be reworked for
new build setup.

Change-Id: I9c0ed84f18fe98a5b8b72f9531ba7fd0fa7f2e31
Reviewed-on: http://codereview.qt.nokia.com/1103
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Julian de Bhal <julian.debhal@nokia.com>