examples/quick3d/shaders/main.cpp
@@ -53,7 +53,7 @@ int main(int argc, char *argv[])
     view.setSource(QUrl::fromLocalFile(qml));
 
 #ifdef Q_OS_SYMBIAN
-    view.setAttribute(Qt::WA_LockLandscapeOrientation, true);
+    view.setAttribute(Qt::WA_LockPortraitOrientation, true);
     view.setResizeMode(QDeclarativeView::SizeRootObjectToView);
     view.showFullScreen();
 #else
