examples/quick3d/lander/lander.pro
@@ -8,6 +8,12 @@ SOURCES += main.cpp
 include(../../../qt3dquick_pkg_dep.pri)
 include(../../../qml_pkg.pri)
 
+symbian {
+    qmlDeployment2.sources = qml\meshes\*
+    qmlDeployment2.path = qml\meshes
+    DEPLOYMENT += qmlDeployment2
+}
+
 OTHER_FILES += \
     lander.rc
 
